libreoffice (1:5.2.7-1+deb9u5) UNRELEASED; urgency=medium

  * debian/patches/disableClassPathURLCheck.diff: add workaround to
    fix build with openjdks with S8195874 included - add
    -Djdk.net.URLClassPath.disableClassPathURLCheck=true to JAVAIFLAGS;
    see https://gerrit.libreoffice.org/#/c/63118/2

 -- Rene Engelhard <rene@debian.org>  Wed, 18 Apr 2018 17:17:55 +0200

libreoffice (1:5.2.7-1+deb9u4) stretch-security; urgency=high

  * debian/patches/CVE-2018-10119.diff,
    debian/patches/CVE-2018-10120.diff: as name says...

 -- Rene Engelhard <rene@debian.org>  Wed, 18 Apr 2018 17:17:55 +0200

libreoffice (1:5.2.7-1+deb9u3) stretch; urgency=medium

  * debian/patches/WEBSERVICE-DDE.diff:
    - improve to not throw more errors than neccessary (use the right error
      code) on WEBSERVICE() failures, thanks Jan-Marek Glogowski; do another
      s/FormulaError::NoValue/formula::errNoValue/ for clarity
    - backport 4a412bdf0387cc2cb59d656d0738a63a286ec497 from 5.4 branch
      to let FunctionAccess execute WEBSERVICE

  * debian/rules:
    - do not run the tests except on i386 (notfatal) and amd64
    - move dk.mk from -dev-common to -dev as it's not arch-indep, thanks
      Rico Tzschichholz

 -- Rene Engelhard <rene@debian.org>  Thu, 22 Feb 2018 11:14:18 +0100

libreoffice (1:5.2.7-1+deb9u2) stretch-security; urgency=high

  * fix control

 -- Rene Engelhard <rene@debian.org>  Fri, 09 Feb 2018 07:22:22 +0100

libreoffice (1:5.2.7-1+deb9u1) stretch-security; urgency=high

  * debian/patches/WEBSERVICE-DDE.diff: backport fix for "Remote arbitrary
    file disclosure vulnerability via WEBSERVICE formula" (CVE-2018-1055) from
    5.4
  * debian/patches/layout-footnote-use-after-free.diff: add; as name says.
    possible patch for iDefense V-mct3ei5wml

  * debian/rules:
    - make i386 make check notfatal for now given the i386 Java Stack Clash
      regression

 -- Rene Engelhard <rene@debian.org>  Thu, 08 Feb 2018 19:02:13 +0100
