@@ -5,18 +5,18 @@ set -e
 #INCLUDE_SHELL_LIB#
 
 if [ "$1" = remove -o "$1" = abort-install -o "$1" = disappear ]; then
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --remove --rename \
+	dpkg-divert --remove --rename \
 		--divert /usr/lib/libreoffice/share/basic/dialog.xlc.noaccess \
                         /usr/lib/libreoffice/share/basic/dialog.xlc
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --remove --rename \
+	dpkg-divert --remove --rename \
 		--divert /usr/lib/libreoffice/share/basic/script.xlc.noaccess \
                         /usr/lib/libreoffice/share/basic/script.xlc
 fi
 if [ "$1" = abort-upgrade ] && dpkg --compare-versions "$2" lt 1:4.3.0~beta1-1; then
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --remove --rename \
+	dpkg-divert --remove --rename \
 		--divert /usr/lib/libreoffice/share/basic/dialog.xlc.noaccess \
                         /usr/lib/libreoffice/share/basic/dialog.xlc
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --remove --rename \
+	dpkg-divert --remove --rename \
 		--divert /usr/lib/libreoffice/share/basic/script.xlc.noaccess \
 			/usr/lib/libreoffice/share/basic/script.xlc
 fi
