@@ -5,10 +5,10 @@ set -e
 #INCLUDE_SHELL_LIB#
 
 if [ upgrade != "$1" ] || dpkg --compare-versions "$2" lt 1:4.3.0~beta1-1; then
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --add --rename \
+	dpkg-divert --add --rename \
 		--divert /usr/lib/libreoffice/share/basic/dialog.xlc.noaccess \
 			/usr/lib/libreoffice/share/basic/dialog.xlc
-	dpkg-divert --package $DPKG_MAINTSCRIPT_PACKAGE --add --rename \
+	dpkg-divert --add --rename \
 		--divert /usr/lib/libreoffice/share/basic/script.xlc.noaccess \
 			/usr/lib/libreoffice/share/basic/script.xlc
 fi
