@@ -4,8 +4,11 @@ libreoffice (1:5.2.7-1+deb9u5) UNRELEASED; urgency=medium
     fix build with openjdks with S8195874 included - add
     -Djdk.net.URLClassPath.disableClassPathURLCheck=true to JAVAIFLAGS;
     see https://gerrit.libreoffice.org/#/c/63118/2
+  * debian/libreoffice-base.{postrm,preinst}.in: remove manual
+    --package $DPKG_MAINTSCRIPT_PACKAG, since dpkg-divert defaults to it
+    since 1.16.0 anyway if not specified (see #912140).
 
- -- Rene Engelhard <rene@debian.org>  Wed, 18 Apr 2018 17:17:55 +0200
+ -- Rene Engelhard <rene@debian.org>  Fri, 09 Nov 2018 20:59:58 +0100
 
 libreoffice (1:5.2.7-1+deb9u4) stretch-security; urgency=high
 
